<resources>
    <string name="app_name">MyHabits</string>
    <string name="done">Done</string>
    <string name="sort_by">Sort by</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="spanish">Spanish</string>
    <string name="hungarian">Hungarian</string>
    <string name="a_to_z"><![CDATA[A->Z]]></string>
    <string name="z_to_a"><![CDATA[Z->A]]></string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="settings">Settings</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="imageURL">ImageURL:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_message">Are you sure you want to delete this item?</string>
    <string name="edit">Edit</string>
    <string name="statistics">Statistics</string>


    <string name="go_to_login">Already registered? Login <u>here</u></string>
    <string name="go_to_register">Don\'t have an account? Register <u>here</u></string>
    <string name="logout">Logout</string>
</resources>
